--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ def add_flipper_pods!(versions = {})
   pod 'FlipperKit/SKIOSNetworkPlugin', versions['Flipper'], :configuration => 'Debug'
   pod 'FlipperKit/FlipperKitUserDefaultsPlugin', versions['Flipper'], :configuration => 'Debug'
   pod 'FlipperKit/FlipperKitReactPlugin', versions['Flipper'], :configuration => 'Debug'
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
 
   # List all transitive dependencies for FlipperKit pods
   # to avoid them being linked in Release builds
