--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.0.0",
     "@gorhom/animated-tabbar": "^1.0.0",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/material-bottom-tabs": "^5.1.9",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animated-nav-tab-bar": "^2.0.3",
     "react-native-cards-slider": "^0.1.2",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^3.8.0",
     "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
