--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animated-nav-tab-bar": "^2.0.3",
+    "react-native-app-intro": "^1.1.5",
+    "react-native-app-intro-slider": "^4.0.2",
     "react-native-cards-slider": "^0.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
