--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-app-intro": "^1.1.5",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-cards-slider": "^0.1.2",
+    "react-native-drop-down-item": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-raw-bottom-sheet": "^2.1.0",
