--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-native-drop-down-item": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-progress": "^4.1.2",
     "react-native-ratings": "^6.5.0",
     "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
