--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-native-app-intro": "^1.1.5",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-cards-slider": "^0.1.2",
+    "react-native-del": "0.0.2",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^4.1.2",
     "react-native-ratings": "^6.5.0",
     "react-native-raw-bottom-sheet": "^2.1.0",
+    "react-native-razorpay": "^2.1.33",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
