--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gorhom/animated-tabbar": "^1.0.0",
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-community/netinfo": "^5.8.0",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
