--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
   package="com.fitbook">
 
     <uses-permission android:name="android.permission.INTERNET" />
+         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
     <application
       android:name=".MainApplication"
@@ -10,6 +14,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+         <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyAvMJQfSi7KEWnICftMup-QuqjEcSIGgp0"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
