--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-community/netinfo": "^5.8.0",
     "@react-navigation/bottom-tabs": "^5.2.7",
-    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.11",
     "react": "16.11.0",
     "react-feather": "^2.0.8",
     "react-native": "0.62.2",
     "react-native-animated-nav-tab-bar": "^2.0.3",
-    "react-native-app-intro": "^1.1.5",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-cards-slider": "^0.1.2",
-    "react-native-del": "0.0.2",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-get-location": "^1.4.2",
+    "react-native-maps": "^0.27.1",
     "react-native-progress": "^4.1.2",
     "react-native-ratings": "^6.5.0",
     "react-native-raw-bottom-sheet": "^2.1.0",
