--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-native-animated-nav-tab-bar": "^2.0.3",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-cards-slider": "^0.1.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-location": "^1.4.2",
+    "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.27.1",
     "react-native-material-menu": "^1.1.3",
